--- a/style/component/_pagenation.scss
+++ b/style/component/_pagenation.scss
@@ -31,14 +31,13 @@
 
     .nextpostslink,
     .previouspostslink {
-        font-size: 1.4rem;
+        font-size: 0;
         color: #FFF;
         font-style: italic;
         width: 78px;
         height: 30px;
         background-color: #282F35;
         text-align: center;
-        padding-top: 8px;
         margin: 0 20px;
         position: relative;
     }
@@ -52,13 +51,13 @@
         background-size: 7px 8px;
         background-position: center;
         display: inline-block;
-        position: relative;
-        top: -1px;
-        margin-right: 8px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
     .nextpostslink:after{
-        transform: rotate(180deg);
-        margin: 0 0 0 8px;
+        transform: translate(-50%, -50%) rotate(180deg);
     }
 }
